fixing visual issues like
- desktop algorithm menu not extending downwards correctly
- canvas was too small, still needs some adjustment so the resized image uses as much screen space as possible
- fixing some visual issues on the mobile view
- using a button to upload image by programmatically clicking the file input element

--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,8 @@
 html {
     font-size: 16px;
 }
+
+body {
+    height: 100%;
+    margin: 0;
+}
